<resources>
    <string name="app_name">AngleAssault</string>
    <string name="start">Start</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="game_speed">Game Mode</string>
    <string name="game_speed_slow">Switch to Slow</string>
    <string name="game_speed_fast">Switch to Fast</string>
    <string name="title_activity_game">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_angle_view">AngleView</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="game_timer">Timer###</string>
    <string name="example_question">Example Question</string>
    <string name="example_angle">###º</string>
    <string name="score_text">"Score: "</string>
    <string name="question_acute">An Acute angle</string>
    <string name="question_right">A Right angle</string>
    <string name="question_obtuse">An Obtuse angle</string>
    <string name="question_straight">A Straight angle</string>
    <string name="question_reflex">A Reflex angle</string>
    <string name="question_pi_radians">Pi Radians</string>
    <string name="question_half_pi_radians">Pi/2 Radians</string>
    <string name="question_three_pi_on_two_radians">3 Pi/2 Radians</string>
    <string name="score_result">Your Final Score</string>
    <string name="share_score_text">You can share this score with friends.</string>
    <string name="share">Share</string>
    <string name="gameOverText">Game Over!</string>
    <string name="dummy_score">999</string>
    <string name="newGame">Play again</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_name_hint">Enter your Name</string>
    <string name="reset_data">Delete High Scores</string>
    <string name="save">Save</string>
    <string name="exitGame">Exit Game</string>
    <string name="seconds_short">%.2f sec</string>
    <string name="main_menu">Main Menu</string>
</resources>