<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/game_over_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gameOverHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameOverText"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorTextLight"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/playerNameInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_hint"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:maxLength="15"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/score_result"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorTextLight" />

        <TextView
            android:id="@+id/scoreNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/dummy_score"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorTextLight"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorButtonBright"
            android:onClick="shareButton"
            android:text="@string/share"
            android:textColor="@color/colorTextLight" />

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButtonBright"
            android:text="@string/newGame"
            android:textColor="@color/colorTextLight" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>