<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_timer"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_text"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_question"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/currentAngle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:rotation="0"
            android:text="@string/example_angle"
            android:textAlignment="center"
            android:textSize="30sp" />

        <FrameLayout
            android:id="@+id/mainViewFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="425dp">

            <dev.timwalsh.angleassault.AngleView
                android:id="@+id/angleView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="425dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>