<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMedium"
    android:gravity="top|center"
    android:orientation="vertical">

    <Button
        android:id="@+id/exitScores"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorButtonBright"
        android:onClick="exitGameButton"
        android:text="@string/main_menu"
        android:textColor="@color/colorTextDark" />

    <TextView
        android:id="@+id/score_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_scores"
        android:textColor="@color/colorTextDark"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_col_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundBright"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/colorTextDark"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/names_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="none"
                android:textAlignment="textEnd">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_col_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundBright"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/colorTextDark"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/scores_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="center">

            </ListView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>