<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundBright"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorTextDark"
        android:translationZ="1dp"

        android:textSize="60sp" />

    <ImageView
        android:id="@+id/main_screen_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:contentDescription="@string/app_name"
        android:background="@drawable/ic_launcher_foreground"
        tools:src="@drawable/ic_launcher_foreground"
        android:scaleX="2"
        android:scaleY="2"
        android:translationZ="0dp"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:text="@string/start"
        android:textColor="@color/colorTextLight"
        android:backgroundTint="@color/colorButtonDark"
        android:textAlignment="center"
        android:onClick="gameButton"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1" />

    <Button
        android:id="@+id/scores_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:text="@string/high_scores"
        android:textColor="@color/colorTextLight"
        android:backgroundTint="@color/colorButtonDark"
        android:textAlignment="center"
        android:onClick="highScoreButton"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:text="@string/settings"
        android:textColor="@color/colorTextLight"
        android:backgroundTint="@color/colorButtonDark"
        android:textAlignment="center"
        android:onClick="settingsButton"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1" />

</LinearLayout>